# pytune_diagnosis

./: .gitignore  Dockerfile  README.md  deploy_pytune_diagnosis.sh  pyproject.toml  run.py
app/: main.py
app/core/: diagnosis_pipeline.py  note_analyzer.py
app/models/: models.py  schemas.py
app/routers/: rt_diagnosis.py  sessions_diagnosis.py
app/scripts/: diag_compare_f0_seed_csv.py  diag_debug_detect_f0_seed_single.py  diag_replay.txt  diag_replay_detect_f0_seed_csv.py  diag_replay_pyin_band_csv.py  diag_replay_yin_candidate_consolidation_csv copy.py  diag_replay_yin_candidate_consolidation_csv.py  diag_replay_yin_simple_csv.py
app/services/: diagnosis_event_bus.py  sse_publisher.py
app/utils/: cr.py  csv_logger.py  diagnosis_log.txt  diagnosis_results.csv  generate_diagnostic_dashboard.py  log.py  mappers.py
tmp/diag_detect_f0_seed_csv/: diag_session_196_detect_f0_seed_octave_20260422_143550.csv  diag_session_196_detect_f0_seed_octave_20260423_102536.csv  diag_session_196_yin_candidate_consolidation_octave_20260423_140521 - diag_session_196_yin_candidate_consolidation_octave_20260423_140521.csv
tmp/diag_yin_simple_csv/: reference.csv
